; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_button.c_test_state.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/comctl32/extr_button.c_test_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BS_PUSHBUTTON = common dso_local global i64 0, align 8
@BS_DEFCOMMANDLINK = common dso_local global i64 0, align 8
@BM_GETSTATE = common dso_local global i32 0, align 4
@BST_UNCHECKED = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [33 x i8] c"Expect state 0x%08x, got 0x%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_state to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_state() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = load i64, i64* @BS_PUSHBUTTON, align 8
  store i64 %4, i64* %2, align 8
  br label %5

5:                                                ; preds = %24, %0
  %6 = load i64, i64* %2, align 8
  %7 = load i64, i64* @BS_DEFCOMMANDLINK, align 8
  %8 = icmp sle i64 %6, %7
  br i1 %8, label %9, label %27

9:                                                ; preds = %5
  %10 = load i64, i64* %2, align 8
  %11 = call i32 @create_button(i64 %10, i32* null)
  store i32 %11, i32* %1, align 4
  %12 = load i32, i32* %1, align 4
  %13 = load i32, i32* @BM_GETSTATE, align 4
  %14 = call i64 @SendMessageA(i32 %12, i32 %13, i32 0, i32 0)
  store i64 %14, i64* %3, align 8
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* @BST_UNCHECKED, align 8
  %17 = icmp eq i64 %15, %16
  %18 = zext i1 %17 to i32
  %19 = load i64, i64* @BST_UNCHECKED, align 8
  %20 = load i64, i64* %3, align 8
  %21 = call i32 @ok(i32 %18, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str, i64 0, i64 0), i64 %19, i64 %20)
  %22 = load i32, i32* %1, align 4
  %23 = call i32 @DestroyWindow(i32 %22)
  br label %24

24:                                               ; preds = %9
  %25 = load i64, i64* %2, align 8
  %26 = add nsw i64 %25, 1
  store i64 %26, i64* %2, align 8
  br label %5

27:                                               ; preds = %5
  ret void
}

declare dso_local i32 @create_button(i64, i32*) #1

declare dso_local i64 @SendMessageA(i32, i32, i32, i32) #1

declare dso_local i32 @ok(i32, i8*, i64, i64) #1

declare dso_local i32 @DestroyWindow(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
